--- a/Tests/POCYamlHandling.Tests/POCYamlHandling.Tests.csproj
+++ b/Tests/POCYamlHandling.Tests/POCYamlHandling.Tests.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Src\POCTemplate\POCTemplate.csproj" />
+    <ProjectReference Include="..\..\Src\POCYamlHandling\POCYamlHandling.csproj" />
   </ItemGroup>
 
 </Project>
